--- a/shipper/src/main/resources/templates/fragment/header-index.html
+++ b/shipper/src/main/resources/templates/fragment/header-index.html
@@ -10,7 +10,7 @@
 	<header id="header" class="header d-flex align-items-center fixed-top" th:fragment="header-index">
 		<div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-			<a href="index.html" class="logo d-flex align-items-center">
+			<a href="/shipper" class="logo d-flex align-items-center">
 				<h1>eShipper</h1>
 			</a>
 
@@ -20,7 +20,7 @@
 				<ul>
 					<li><a href="#hero" class="active">Home</a></li>
 					<li><a href="#">About Us</a></li>
-					<li><a class="get-a-quote" href="get-a-quote.html">Be A Shipper</a></li>
+					<li><a class="get-a-quote" href="/shipper">Be A Shipper</a></li>
 				</ul>
 			</nav><!-- .navbar -->
 
