--- a/shipper/src/main/resources/templates/fragment/footer.html
+++ b/shipper/src/main/resources/templates/fragment/footer.html
@@ -14,7 +14,7 @@
               <a href="index.html" class="logo d-flex align-items-center">
                 <span>eShipper</span>
               </a>
-              <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+              <p>The website for shippers with the mission to distribute consumer goods to customers.</p>
               <div class="social-links d-flex mt-4">
                 <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -26,7 +26,7 @@
             <div class="col-lg-2 col-6 footer-links">
               <h4>Useful Links</h4>
               <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/shipper/home">Home</a></li>
                 <li><a href="#">About us</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Terms of service</a></li>
@@ -37,24 +37,23 @@
             <div class="col-lg-2 col-6 footer-links">
               <h4>Our Services</h4>
               <ul>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">Web Development</a></li>
+                <li><a href="#">Standard Delivery</a></li>
+                <li><a href="#">Fast Delivery</a></li>
                 <li><a href="#">Product Management</a></li>
                 <li><a href="#">Marketing</a></li>
-                <li><a href="#">Graphic Design</a></li>
+                <li><a href="#">Customer Care</a></li>
               </ul>
             </div>
     
             <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
               <h4>Contact Us</h4>
               <p>
-                A108 Adam Street <br>
-                New York, NY 535022<br>
-                United States <br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                Ta Quang Buu Street <br>
+                Thu Duc, TP.HCM<br>
+                Vietnam <br><br>
+                <strong>Phone:</strong> +84 999 999 999<br>
+                <strong>Email:</strong> info@gmail.com<br>
               </p>
-    
             </div>
     
           </div>
