Cannot use href

--- a/ManagerInfo/src/main/resources/templates/CustomerMenu.html
+++ b/ManagerInfo/src/main/resources/templates/CustomerMenu.html
@@ -8,10 +8,10 @@
     <title>Home</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" th:href="@{img/sample/logo/favicon.ico}" type="image/x-icon">
+    <link rel="shortcut icon" th:href="@{../static/img/sample/logo/favicon.ico}" type="image/x-icon">
 
     <!-- custom css link -->
-    <link rel="stylesheet" th:href="@{/css/style_sample-prefix.css}">
+    <link rel="stylesheet" th:href="@{../static/css/style_sample-prefix.css}">
 
     <!-- google font link -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
