--- a/ManagerInfo/src/main/resources/templates/fragments/layout/footer/footer-bottom.html
+++ b/ManagerInfo/src/main/resources/templates/fragments/layout/footer/footer-bottom.html
@@ -10,7 +10,7 @@
 
         <div class="container">
 
-            <img th:src="@{/img/sample/payment.png}" alt="payment method" class="payment-img">
+            <img th:src="@{../static/img/sample/payment.png}" alt="payment method" class="payment-img">
 
             <p class="copyright">
                 Copyright &copy; <a href="#">Anon</a> all rights reserved.
