--- a/ManagerInfo/src/main/resources/templates/fragments/layout/header/header-main.html
+++ b/ManagerInfo/src/main/resources/templates/fragments/layout/header/header-main.html
@@ -10,9 +10,9 @@
 
         <div class="container">
 
-            <a href="#" class="header-logo">
-                <img th:src="@{/img/sample/logo/logo.svg}" alt="Anon's logo" width="120" height="36">
-            </a>
+<!--            <a href="#" class="header-logo">-->
+<!--                <img th:src="@{/img/sample/logo/logo.svg}" alt="Anon's logo" width="120" height="36">-->
+<!--            </a>-->
 
             <div class="header-search-container">
 
