--- a/food/src/main/resources/templates/fragment/header.html
+++ b/food/src/main/resources/templates/fragment/header.html
@@ -19,7 +19,7 @@
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a href="../food/view-food" class="active">Home</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="../manager-info/get-manager-info">Profile</a></li>
                     <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="#">Logout</a>
                     </li>
                 </ul>
