--- a/shipper/src/main/resources/templates/in-progress-order.html
+++ b/shipper/src/main/resources/templates/in-progress-order.html
@@ -115,6 +115,7 @@
 
 	<!-- Template Main JS File -->
 	<script th:src="@{/assets/js/main.js}"></script>
+	<script th:src="@{/assets/js/domain.js}"></script>
 
 	<!-- Ajax -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
@@ -135,7 +136,7 @@
 			}
 
 			$.ajax({
-				url: "http://localhost:8080/shipper/order/fragment/in-progress/0/-1/" + pageNumber,
+				url: shipperDomain + "/shipper/order/fragment/in-progress/0/-1/" + pageNumber,
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
@@ -166,7 +167,7 @@
 			}
 
 			$.ajax({
-				url: `http://localhost:8080/shipper/order/fragment/in-progress/${isSearch}/${orderId}/1`,
+				url: shipperDomain + `/shipper/order/fragment/in-progress/${isSearch}/${orderId}/1`,
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
@@ -179,7 +180,7 @@
 		function finish(that) {
 			let orderId = $(that).closest("tr").find(".order-id").text();
 			$.ajax({
-				url: 'http://localhost:8080/api/order/shipper/finish/',
+				url: virtual_food_cart_orderDomain + '/api/order/shipper/finish/',
 				method: 'PUT',
 				data: {
 					orderId: orderId
