--- a/shipper/src/main/resources/templates/index.html
+++ b/shipper/src/main/resources/templates/index.html
@@ -191,6 +191,7 @@
 
 	<!-- Template Main JS File -->
 	<script th:src="@{/assets/js/main.js}"></script>
+	<script th:src="@{/assets/js/domain.js}"></script>
 
 </body>
 
