--- a/shipper/src/main/resources/templates/order-detail.html
+++ b/shipper/src/main/resources/templates/order-detail.html
@@ -90,6 +90,7 @@
 
 	<!-- Template Main JS File -->
 	<script th:src="@{/assets/js/main.js}"></script>
+	<script th:src="@{/assets/js/domain.js}"></script>
 
 	<!-- Handle total cost -->
 	<script>
