--- a/ManagerInfo/src/main/resources/templates/fragments/layout/header.html
+++ b/ManagerInfo/src/main/resources/templates/fragments/layout/header.html
@@ -7,9 +7,9 @@
 
 <body>
     <header th:fragment="header">
-        <div th:replace="fragments/layout/header/header-top :: header-top"></div>
-        <div th:replace="fragments/layout/header/header-main :: header-main"></div>
-        <div th:replace="fragments/layout/header/nav :: nav"></div>
+<!--        <div th:replace="fragments/layout/header/header-top :: header-top"></div>-->
+        <div th:replace="fragments/layout/header/header-main :: header-main" class="text-right"></div>
+<!--        <div th:replace="fragments/layout/header/nav :: nav"></div>-->
     </header>
 </body>
 
