--- a/cart/src/main/resources/static/css/style.css
+++ b/cart/src/main/resources/static/css/style.css
@@ -12,7 +12,7 @@
 @import url(bootsnav.css);
 @import url(owl.carousel.min.css);
 @import url(jquery-ui.css);
-@import url(nice-select.css);
+/*@import url(nice-select.css);*/
 @import url(baguetteBox.min.css);
 
 
