--- a/cart/src/main/resources/templates/fragments.html
+++ b/cart/src/main/resources/templates/fragments.html
@@ -103,8 +103,7 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="navbar-menu">
         <ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
-          <li class="nav-item"><a class="nav-link"th:href="@{/}">Home</a></li>
-          <li class="nav-item active"><a class="nav-link" th:href="@{/home}">Menu</a></li>
+          <li class="nav-item"><a class="nav-link"th:href="@{../manager-info/get-all-food}">Menu</a></li>
 
           <li class="dropdown">
             <a href="#" class="nav-link dropdown-toggle arrow" data-toggle="dropdown">Shop</a>
@@ -215,8 +214,7 @@
       <div class="col-lg-12">
         <h2>Menu</h2>
         <ul class="breadcrumb">
-          <li class="breadcrumb-item"><a href="home.html">Home</a></li>
-          <li class="breadcrumb-item active"> Menu</li>
+          <li class="breadcrumb-item"><a href="../manager-info/get-all-food">Home</a></li>
         </ul>
       </div>
     </div>
