--- a/shipper/src/main/resources/templates/home.html
+++ b/shipper/src/main/resources/templates/home.html
@@ -136,7 +136,7 @@
 			}
 
 			$.ajax({
-				url: shipperDomain + "/shipper/order/fragment/not-busy/0/-1/" + pageNumber,
+				url: "../shipper/order/fragment/not-busy/0/-1/" + pageNumber,
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
