--- a/shipper/src/main/resources/templates/home.html
+++ b/shipper/src/main/resources/templates/home.html
@@ -167,7 +167,7 @@
 			}
 
 			$.ajax({
-				url: shipperDomain + `/shipper/order/fragment/not-busy/${isSearch}/${orderId}/1`,
+				url: `../shipper/order/fragment/not-busy/${isSearch}/${orderId}/1`,
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
