--- a/shipper/src/main/resources/templates/delivered-order.html
+++ b/shipper/src/main/resources/templates/delivered-order.html
@@ -45,7 +45,7 @@
 		<!-- ======= Breadcrumbs ======= -->
 		<div class="breadcrumbs">
 			<div class="page-header d-flex align-items-center"
-				style="background-image: url('/assets/img/page-header.jpg');">
+				style="background-image: url('../assets/img/page-header.jpg');">
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
@@ -134,7 +134,7 @@
 			}
 
 			$.ajax({
-				url: shipperDomain + "/shipper/order/fragment/delivered/0/-1/" + pageNumber,
+				url: "../order/fragment/delivered/0/-1/" + pageNumber,
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
@@ -165,7 +165,7 @@
 			}
 
 			$.ajax({
-				url: shipperDomain + `/shipper/order/fragment/delivered/${isSearch}/${orderId}/1`,
+				url: `../order/fragment/delivered/${isSearch}/${orderId}/1`,
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
