--- a/shipper/src/main/resources/templates/fragment/in-progress-orders-box.html
+++ b/shipper/src/main/resources/templates/fragment/in-progress-orders-box.html
@@ -21,7 +21,7 @@
                 <td class="order-id" th:utext="${order.id}"></td>
                 <td th:utext="${order.createdDate}"></td>
                 <td th:utext="${order.address}"></td>
-                <td><a class="btn btn-primary" th:href="@{'/shipper/order/' + ${order.id}}">Detail</a></td>
+                <td><a class="btn btn-primary" th:href="@{'../order/' + ${order.id}}">Detail</a></td>
                 <td><button class="btn btn-success" onclick="finish(this)">Finish</button></td>
             </tr>
         </tbody>
