--- a/shipper/src/main/resources/templates/fragment/profile-box.html
+++ b/shipper/src/main/resources/templates/fragment/profile-box.html
@@ -20,11 +20,11 @@
                                     placeholder="Username" disabled>
                             </div>
 
-                            <div class="col-md-12">
+                            <!--<div class="col-md-12">
                                 <label class="mb-2">Password:</label>
                                 <input type="password" name="password" th:value="${user.password}" class="form-control"
                                     placeholder="Password" required>
-                            </div>
+                            </div>-->
 
                             <div class="col-md-12">
                                 <label class="mb-2">Full Name:</label>
