--- a/shipper/src/main/resources/templates/profile.html
+++ b/shipper/src/main/resources/templates/profile.html
@@ -44,7 +44,7 @@
 		<!-- ======= Breadcrumbs ======= -->
 		<div class="breadcrumbs">
 			<div class="page-header d-flex align-items-center"
-				style="background-image: url('/assets/img/page-header.jpg');">
+				style="background-image: url('../shipper/assets/img/page-header.jpg');">
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
@@ -97,7 +97,7 @@
 
 		function render() {
 			$.ajax({
-				url: shipperDomain + "/shipper/profile/profile-box",
+				url: "../shipper/profile/profile-box",
 				type: 'GET',
 				contentType: "html",
 				crossDomain: true,
@@ -112,7 +112,7 @@
 			let formData = $('#submit-form').serialize(); // Serialize the form data
 
 			$.ajax({
-				url: shipperDomain + '/api/user',
+				url: '../shipper/api/user',
 				method: 'PUT',
 				data: formData,
 				success: function (response) {
