--- a/shipper/src/main/resources/templates/in-progress-order.html
+++ b/shipper/src/main/resources/templates/in-progress-order.html
@@ -44,7 +44,7 @@
 		<!-- ======= Breadcrumbs ======= -->
 		<div class="breadcrumbs">
 			<div class="page-header d-flex align-items-center"
-				style="background-image: url('/assets/img/page-header.jpg');">
+				style="background-image: url('../assets/img/page-header.jpg');">
 				<div class="container position-relative">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-6 text-center">
@@ -180,7 +180,7 @@
 		function finish(that) {
 			let orderId = $(that).closest("tr").find(".order-id").text();
 			$.ajax({
-				url: shipperDomain + '/shipper/order/finish',
+				url: '../order/finish',
 				method: 'PUT',
 				data: {
 					orderId: orderId
