--- a/ManagerInfo/src/main/resources/templates/CustomerMenu.html
+++ b/ManagerInfo/src/main/resources/templates/CustomerMenu.html
@@ -53,7 +53,7 @@
                 <td th:utext="${food.price}"></td>
                 <!--<td th:utext="${food.quantity}"></td>-->
                 <td>
-                    <img style="max-width: 70px; height: auto; border-radius: 20px " th:src="${food.imageLink}">
+                    <img style="max-width: 70px; height: auto; border-radius: 20px " th:src="@{|../storage/image-food/${food.imageLink}|}">
                 </td>
                 <td>
                     <button th:if="${food != null}" th:attr="data-foodId=${food.id}" class="buy-button btn btn-success">Buy</button>
