Sync "virtual" microservice with center database

--- a/shipper/src/main/resources/templates/fragment/order-detail-box.html
+++ b/shipper/src/main/resources/templates/fragment/order-detail-box.html
@@ -18,6 +18,10 @@
                 <span th:utext="${orderDetail.customerFullname}">123</span>
             </p>
             <p>
+                <b>Customer Full Name: </b>
+                <span th:utext="${orderDetail.customerPhone}">123</span>
+            </p>
+            <p>
                 <b>Shipper Full Name: </b>
                 <span th:utext="${orderDetail.shipperFullname}">123</span>
             </p>
