Sync "Shipper" microservice with center database

--- a/shipper/src/main/resources/templates/fragment/order-detail-box.html
+++ b/shipper/src/main/resources/templates/fragment/order-detail-box.html
@@ -18,7 +18,7 @@
                 <span th:utext="${orderDetail.customerFullname}">123</span>
             </p>
             <p>
-                <b>Customer Full Name: </b>
+                <b>Customer Phone: </b>
                 <span th:utext="${orderDetail.customerPhone}">123</span>
             </p>
             <p>
@@ -28,10 +28,6 @@
             <p>
                 <b>Address: </b>
                 <span th:utext="${orderDetail.address}">123</span>
-            </p>
-            <p>
-                <b>Created date: </b>
-                <span th:utext="${orderDetail.createdDate}">123</span>
             </p>
         </div>
         <div>
