--- a/user-service/src/main/resources/templates/register-page.html
+++ b/user-service/src/main/resources/templates/register-page.html
@@ -24,7 +24,7 @@
                     <form th:action="@{/process_register}" th:object="${user}" method="post" class="register-form" id="register-form">
                         <div class="form-group">
                             <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                            <input th:field="*{fullName}" type="text" name="name" id="name" placeholder="Your name"/>
+                            <input th:field="*{fullname}" type="text" name="name" id="name" placeholder="Your name"/>
                         </div>
                         <div class="form-group">
                             <label for="email"><i class="zmdi zmdi-email"></i></label>
