--- a/user-service/src/main/resources/templates/users.html
+++ b/user-service/src/main/resources/templates/users.html
@@ -105,7 +105,7 @@
 				<ul>
 					<li>
 						<a>
-							Welcome <a th:href="@{/account-form}">[[${#request.userPrincipal.principal.fullName}]] </a>
+							Welcome <a th:href="@{/account-form}">[[${#request.userPrincipal.principal.fullname}]] </a>
 							<span sec:authentication="principal.authorities"></span>
 						</a>
 					</li>
