Add some data for demo

--- a/shipper/src/main/resources/templates/fragment/header.html
+++ b/shipper/src/main/resources/templates/fragment/header.html
@@ -22,7 +22,7 @@
                     <li><a href="/shipper/order/in-progress">In-Progress Orders</a></li>
                     <li><a href="/shipper/order/delivered">Delivered Orders</a></li>
                     <li><a href="/shipper/profile">Profile</a></li>
-                    <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="get-a-quote.html">Logout</a>
+                    <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="/user/">Logout</a>
                     </li>
                 </ul>
             </nav><!-- .navbar -->
