Update logout for food

--- a/food/src/main/resources/templates/fragment/header.html
+++ b/food/src/main/resources/templates/fragment/header.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="../food/view-food" class="active">Home</a></li>
                     <li><a href="../manager-info/get-manager-info">Profile</a></li>
-                    <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="#">Logout</a>
+                    <li><a class="get-a-quote" style="background-color: #ff2c2c;" href="../user">Logout</a>
                     </li>
                 </ul>
             </nav><!-- .navbar -->
